test/blackbox-test/test-cases/case_expr_error02.expected
test-cases/case_expr_error02.erl:8: Type error: type mismatch;
  found   : number()
  required: 'foo'
there is no solution that satisfies subtype constraints
